--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "description": "Data structures, parsers and serializers for the supported games.",
   "scripts": {
-    "generate_schema": "typescript-json-schema src/QuestionTypes.ts QuestionSet -o dist/schema.json"
+    "generate_schema": "typescript-json-schema src/QuestionTypes.ts QuestionSet -o dist/schema.json",
+    "compile": "tsc --build"
   },
   "keywords": [
     "Ani-Grenoble",
@@ -17,6 +18,7 @@
     "typescript-json-schema": "^0.50.1"
   },
   "dependencies": {
-    "ajv": "^8.5.0"
+    "ajv": "^8.5.0",
+    "ts-result": "^1.0.2"
   }
 }
