--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "description": "Data structures, parsers and serializers for the supported games.",
   "scripts": {
-    "generate_schema": "typescript-json-schema src/QuestionTypes.ts QuestionSet -o dist/schema.json",
-    "compile": "tsc --build"
+    "generate_schema": "typescript-json-schema --required src/QuestionTypes.ts QuestionSet -o dist/schema.json",
+    "compile": "tsc --build",
+    "test": "mocha -r ts-node/register tests/*.ts"
   },
   "keywords": [
     "Ani-Grenoble",
@@ -15,10 +16,15 @@
   "author": "Gael GC",
   "license": "ISC",
   "devDependencies": {
+    "@types/chai": "^4.2.18",
+    "@types/mocha": "^8.2.2",
+    "chai": "^4.3.4",
+    "mocha": "^8.4.0",
+    "ts-node": "^10.0.0",
     "typescript-json-schema": "^0.50.1"
   },
   "dependencies": {
     "ajv": "^8.5.0",
-    "ts-result": "^1.0.2"
+    "ts-results": "^3.3.0"
   }
 }
