--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "generate_question_schema": "typescript-json-schema --required src/QuestionTypes.ts QuestionSet -o dist/question_schema.json",
     "generate_player_schema": "typescript-json-schema --required src/GameState.ts Player -o dist/player_schema.json",
     "generate_game_state_schema": "typescript-json-schema --required src/GameState.ts GameState -o dist/game_state_schema.json",
+    "generate_question_winners_schema": "typescript-json-schema --required src/GameState.ts QuestionWinners -o dist/question_winners_schema.json",
     "compile": "tsc --build",
     "test": "mocha -r ts-node/register tests/*.ts"
   },
