--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ani-grenoble-games-format",
-  "version": "0.2.1",
+  "name": "@gaelgc/ani-grenoble-games-format",
+  "version": "0.3.3",
   "description": "Data structures, parsers and serializers for the supported games.",
   "scripts": {
     "generate_question_schema": "typescript-json-schema --required src/QuestionTypes.ts QuestionSet -o dist/question_schema.json",
@@ -18,12 +18,14 @@
   ],
   "author": "Gael GC",
   "license": "ISC",
+  "types": "./dist/index.d.ts",
   "devDependencies": {
     "@types/chai": "^4.2.18",
     "@types/mocha": "^8.2.2",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
     "chai": "^4.3.4",
+    "copyfiles": "^2.4.1",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.24.2",
@@ -37,5 +39,8 @@
   "dependencies": {
     "ajv": "^8.5.0",
     "ts-results": "^3.3.0"
+  },
+  "exports": {
+    ".": "./dist/index.js"
   }
 }
