[MISC] Factorize the different codes

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@gaelgc/ani-grenoble-games-format",
-  "version": "0.9.0",
+  "version": "0.10.0",
   "description": "Data structures, parsers and serializers for the supported games.",
   "scripts": {
-    "generate_question_schema": "typescript-json-schema --required src/QuestionTypes.ts QuestionSet -o dist/question_schema.json",
-    "generate_player_schema": "typescript-json-schema --required src/GameState.ts Player -o dist/player_schema.json",
-    "generate_game_state_schema": "typescript-json-schema --required src/GameState.ts GameState -o dist/game_state_schema.json",
-    "generate_question_winners_schema": "typescript-json-schema --required src/GameState.ts QuestionWinners -o dist/question_winners_schema.json",
-    "generate_goose_board_schema": "typescript-json-schema --required src/GooseBoard.ts GooseBoard -o dist/goose_board_schema.json",
+    "generate_question_schema": "typescript-json-schema --required src/question_types.ts QuestionSet -o dist/question_schema.json",
+    "generate_player_schema": "typescript-json-schema --required src/game_state.ts Player -o dist/player_schema.json",
+    "generate_game_state_schema": "typescript-json-schema --required src/game_state.ts GameState -o dist/game_state_schema.json",
+    "generate_question_winners_schema": "typescript-json-schema --required src/game_state.ts QuestionWinners -o dist/question_winners_schema.json",
+    "generate_goose_board_schema": "typescript-json-schema --required src/goose_board.ts GooseBoard -o dist/goose_board_schema.json",
     "compile": "tsc --build",
     "test": "mocha -r ts-node/register tests/*.ts"
   },
@@ -21,21 +21,21 @@
   "license": "ISC",
   "types": "./dist/index.d.ts",
   "devDependencies": {
-    "@types/chai": "^4.3.10",
-    "@types/mocha": "^8.2.3",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
+    "@types/chai": "^4.3.11",
+    "@types/mocha": "^10.0.5",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
     "chai": "^4.3.10",
     "copyfiles": "^2.4.1",
-    "eslint": "^7.32.0",
-    "eslint-config-standard": "^16.0.3",
+    "eslint": "^8.54.0",
+    "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.2.0",
-    "mocha": "^8.4.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "mocha": "^10.2.0",
     "ts-node": "^10.9.1",
     "tslib": "^2.6.2",
-    "typescript-json-schema": "^0.50.1"
+    "typescript-json-schema": "^0.62.0"
   },
   "dependencies": {
     "ajv": "^8.12.0",
