--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gaelgc/ani-grenoble-games-format",
-  "version": "0.10.0",
+  "version": "0.11.0",
   "description": "Data structures, parsers and serializers for the supported games.",
   "scripts": {
     "generate_question_schema": "typescript-json-schema --required src/question_types.ts PartialQuestionSet -o dist/question_schema.json",
@@ -8,6 +8,7 @@
     "generate_game_state_schema": "typescript-json-schema --required src/game_state.ts GameState -o dist/game_state_schema.json",
     "generate_question_winners_schema": "typescript-json-schema --required src/game_state.ts QuestionWinners -o dist/question_winners_schema.json",
     "generate_goose_board_schema": "typescript-json-schema --required src/goose_board.ts GooseBoard -o dist/goose_board_schema.json",
+    "generate_all": "copyfiles -f src/oldvers/*.json dist && npm run generate_goose_board_schema && npm run generate_question_winners_schema && npm run generate_game_state_schema && npm run generate_player_schema && npm run generate_question_schema",
     "compile": "tsc --build",
     "test": "mocha -r ts-node/register tests/*.ts"
   },
